[package]
name = "bevy_arrows_plugin"
description = "A Bevy plugin for drawing arrows next to components. Very WIP"
homepage = "https://github.com/danya02/bevy_arrows_plugin"
repository = "https://github.com/danya02/bevy_arrows_plugin"
license = "MIT"
version = "0.1.0"
edition = "2024"
keywords = ["bevy", "arrow", "3d", "2d"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = ["bevy_asset", "bevy_pbr"] }

[dev-dependencies]
bevy = "0.15.3"
bevy-inspector-egui = "0.30.0"
bevy_tweening = "0.12.0"
rand = "0.9.0"
